-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9, 5.10
-
None
-
8bc2feb498cbbeafe0de52cda929ef7a881c0351
I was lazy and was trying to guess what the correct values were, when I accidentally caused a crash by passing Drawer.Right.
import QtQuick 2.6 import QtQuick.Controls 2.0 ApplicationWindow { visible: true width: 640 height: 480 Drawer { id: drawer width: parent.width * 0.33 height: parent.height edge: Drawer.Right } }
ASSERT failure in Q_UNREACHABLE(): "Q_UNREACHABLE was reached", file /home/mitch/dev/qt5-dev/qtquickcontrols2/src/quicktemplates2/qquickdrawer.cpp, line 270 The program has unexpectedly finished.