Drawer: ignore and warn about invalid edge values

This fixes an issue where an application would crash when opening a
drawer by dragging it after an invalid edge value had been set.

Task-number: QTBUG-61843
Change-Id: Ie9b9ea0276b356b92927b858f2be355bfc042afb
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>